--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -1,30 +1,44 @@
-<div th:fragment = "parent(content)">
-<h1>This is parent fragment</h1>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis saepe nostrum sint itaque error, 
-    maiores architecto rerum, tempore repellat inventore excepturi iste dicta! Impedit dolorum expedita illum sunt, saepe nam!</p>
+<!DOCTYPE html>
+<html lang="en" 
 
+th:fragment="parent(content,title)" 
+xmlns:th="http://www.thymeleaf.org">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title data-th-replace="${title}">SCM Base Page Title</title>
+  <link rel="stylesheet" data-th-href="@{'/css/output.css'}">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.css" rel="stylesheet" />
 
+</head>
+<body>
 
-</div>
+  <!-- BASE PAGE CONTECT -->
+  <!-- <h1>This is base page content </h1><br> -->
+  <div data-th-replace="navbar :: navbar">
 
-<div th:fragment = "arjunFragment">
- <h1>
-    This is arjun Fragment demo testing
- </h1>
-  <p>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-     Non nisi cum voluptatem aperiam at totam ea debitis corrupti consequuntur facere aspernatur sequi, hic dolorum rerum? Quia laudantium repellendus vero eum.
-  </p>
+  </div>
  
-</div>
 
 
-<div th:fragment = "userNotLogin">
-    <h1>
-      The user wants to login in the application.
-    </h1>
-     <p>
-       Lorem ipsum dolor sit amet consectetur adipisicing elit.
-     </p>
+  <!-- MAIN CONTENT  which is page specific -->
+  <section data-th-replace="${content}"></section>
+ 
+  <!-- Main Link which are page specifics -->
+  <!--  <a data-th-href="${link}">Link To Home Page</a> -->
+  <!--  <section data-th-replace="$(link)"></section> -->
 
-</div>
+
+
+
+ <!-- Common Footer-->
+
+ <!--  
+  <footer class="p-4">
+     Footer : This Footer is managed by the Developer Name Arjun
+  </footer>
+-->
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.js"></script>
+</body>
+</html>
