--- a/src/main/resources/templates/services.html
+++ b/src/main/resources/templates/services.html
@@ -1,27 +1,34 @@
-<html lang="en">
+<!DOCTYPE html>
+<html lang="en"
+th:replace = "~{base :: parent( ~{::#content}, ~{::title} )}"
+>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Services HTML</title>
+    <title>Services Page Title</title>
 </head>
+
+
 <body>
+    <section id="content">
 
-    <h1>
+            <h1>Welcome to services page</h1>
+            <h2>Services offered by SCM</h2>
 
-        This is services page
-
-    </h1>
-    
-
-<div th:replace="~{base :: parent(~{::section})}">
-
-    <section>
-        <h1>
-            This is the content in the section
-        </h1>
     </section>
 
-</div>
+
+    <div>
+        
+            <ul>
+              <li>
+                <a class="page-link" href="#">NEXT</a>
+              </li>
+            </ul>
+        
+
+
+    </div>
 
 </body>
 </html>
